# Snappy

./: CMakeLists.txt  main.c
header/: compression.h  decompression.h  hashTable.h  literal.h  match.h  stringBuffer.h  utilities.h
source/: compression.c  decompression.c  hashTable.c  literal.c  main.c  match.c  stringBuffer.c  utilities.c
